ansible/roles/web_server/files/iptables
# Generated by iptables-save v1.4.21 on Thu Aug 16 20:15:46 2018
*nat
:PREROUTING ACCEPT [869321:48725032]
:INPUT ACCEPT [449561:26640780]
:OUTPUT ACCEPT [289505:21325161]
:POSTROUTING ACCEPT [289505:21325161]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_bx_trusted - [0:0]
:POST_bx_trusted_allow - [0:0]
:POST_bx_trusted_deny - [0:0]
:POST_bx_trusted_log - [0:0]
:POST_public - [0:0]
:POST_public_allow - [0:0]
:POST_public_deny - [0:0]
:POST_public_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_bx_trusted - [0:0]
:PRE_bx_trusted_allow - [0:0]
:PRE_bx_trusted_deny - [0:0]
:PRE_bx_trusted_log - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
-A POSTROUTING -j POSTROUTING_ZONES
-A POSTROUTING_ZONES -g POST_public
-A POSTROUTING_ZONES_SOURCE -d 192.168.0.4/32 -g POST_bx_trusted
-A POST_bx_trusted -j POST_bx_trusted_log
-A POST_bx_trusted -j POST_bx_trusted_deny
-A POST_bx_trusted -j POST_bx_trusted_allow
-A POST_public -j POST_public_log
-A POST_public -j POST_public_deny
-A POST_public -j POST_public_allow
-A PREROUTING_ZONES -g PRE_public
-A PREROUTING_ZONES_SOURCE -s 192.168.0.4/32 -g PRE_bx_trusted
-A PRE_bx_trusted -j PRE_bx_trusted_log
-A PRE_bx_trusted -j PRE_bx_trusted_deny
-A PRE_bx_trusted -j PRE_bx_trusted_allow
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Thu Aug 16 20:15:46 2018
# Generated by iptables-save v1.4.21 on Thu Aug 16 20:15:46 2018
*mangle
:PREROUTING ACCEPT [4661183:778055153]
:INPUT ACCEPT [4661183:778055153]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4906433:2032593936]
:POSTROUTING ACCEPT [4906433:2032593936]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_bx_trusted - [0:0]
:PRE_bx_trusted_allow - [0:0]
:PRE_bx_trusted_deny - [0:0]
:PRE_bx_trusted_log - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -g PRE_public
-A PREROUTING_ZONES_SOURCE -s 192.168.0.4/32 -g PRE_bx_trusted
-A PRE_bx_trusted -j PRE_bx_trusted_log
-A PRE_bx_trusted -j PRE_bx_trusted_deny
-A PRE_bx_trusted -j PRE_bx_trusted_allow
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Thu Aug 16 20:15:46 2018
# Generated by iptables-save v1.4.21 on Thu Aug 16 20:15:46 2018
*security
:INPUT ACCEPT [4241076:755956934]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4906433:2032593936]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Thu Aug 16 20:15:46 2018
# Generated by iptables-save v1.4.21 on Thu Aug 16 20:15:46 2018
*raw
:PREROUTING ACCEPT [4661183:778055153]
:OUTPUT ACCEPT [4906433:2032593936]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_bx_trusted - [0:0]
:PRE_bx_trusted_allow - [0:0]
:PRE_bx_trusted_deny - [0:0]
:PRE_bx_trusted_log - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -g PRE_public
-A PREROUTING_ZONES_SOURCE -s 192.168.0.4/32 -g PRE_bx_trusted
-A PRE_bx_trusted -j PRE_bx_trusted_log
-A PRE_bx_trusted -j PRE_bx_trusted_deny
-A PRE_bx_trusted -j PRE_bx_trusted_allow
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Thu Aug 16 20:15:46 2018
# Generated by iptables-save v1.4.21 on Thu Aug 16 20:15:46 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4906433:2032593936]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_IN_ZONES_SOURCE - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:FORWARD_OUT_ZONES_SOURCE - [0:0]
:FORWARD_direct - [0:0]
:FWDI_bx_trusted - [0:0]
:FWDI_bx_trusted_allow - [0:0]
:FWDI_bx_trusted_deny - [0:0]
:FWDI_bx_trusted_log - [0:0]
:FWDI_public - [0:0]
:FWDI_public_allow - [0:0]
:FWDI_public_deny - [0:0]
:FWDI_public_log - [0:0]
:FWDO_bx_trusted - [0:0]
:FWDO_bx_trusted_allow - [0:0]
:FWDO_bx_trusted_deny - [0:0]
:FWDO_bx_trusted_log - [0:0]
:FWDO_public - [0:0]
:FWDO_public_allow - [0:0]
:FWDO_public_deny - [0:0]
:FWDO_public_log - [0:0]
:INPUT_ZONES - [0:0]
:INPUT_ZONES_SOURCE - [0:0]
:INPUT_direct - [0:0]
:IN_bx_trusted - [0:0]
:IN_bx_trusted_allow - [0:0]
:IN_bx_trusted_deny - [0:0]
:IN_bx_trusted_log - [0:0]
:IN_public - [0:0]
:IN_public_allow - [0:0]
:IN_public_deny - [0:0]
:IN_public_log - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j INPUT_direct
-A INPUT -j INPUT_ZONES_SOURCE
-A INPUT -j INPUT_ZONES
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -j FORWARD_direct
-A FORWARD -j FORWARD_IN_ZONES_SOURCE
-A FORWARD -j FORWARD_IN_ZONES
-A FORWARD -j FORWARD_OUT_ZONES_SOURCE
-A FORWARD -j FORWARD_OUT_ZONES
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -j OUTPUT_direct
-A FORWARD_IN_ZONES -g FWDI_public
-A FORWARD_IN_ZONES_SOURCE -s 192.168.0.4/32 -g FWDI_bx_trusted
-A FORWARD_OUT_ZONES -g FWDO_public
-A FORWARD_OUT_ZONES_SOURCE -d 192.168.0.4/32 -g FWDO_bx_trusted
-A FWDI_bx_trusted -j FWDI_bx_trusted_log
-A FWDI_bx_trusted -j FWDI_bx_trusted_deny
-A FWDI_bx_trusted -j FWDI_bx_trusted_allow
-A FWDI_bx_trusted -p icmp -j ACCEPT
-A FWDI_public -j FWDI_public_log
-A FWDI_public -j FWDI_public_deny
-A FWDI_public -j FWDI_public_allow
-A FWDI_public -p icmp -j ACCEPT
-A FWDO_bx_trusted -j FWDO_bx_trusted_log
-A FWDO_bx_trusted -j FWDO_bx_trusted_deny
-A FWDO_bx_trusted -j FWDO_bx_trusted_allow
-A FWDO_public -j FWDO_public_log
-A FWDO_public -j FWDO_public_deny
-A FWDO_public -j FWDO_public_allow
-A INPUT_ZONES -g IN_public
-A INPUT_ZONES_SOURCE -s 192.168.0.4/32 -g IN_bx_trusted
-A IN_bx_trusted -j IN_bx_trusted_log
-A IN_bx_trusted -j IN_bx_trusted_deny
-A IN_bx_trusted -j IN_bx_trusted_allow
-A IN_bx_trusted -p icmp -j ACCEPT
-A IN_bx_trusted_allow -p tcp -m tcp --dport 1:65535 -m conntrack --ctstate NEW -j ACCEPT
-A IN_bx_trusted_allow -p udp -m udp --dport 1:65535 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public -j IN_public_log
-A IN_public -j IN_public_deny
-A IN_public -j IN_public_allow
-A IN_public -p icmp -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8070 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8890 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8891 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8893 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8894 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5222 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5223 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
